create first card in gallery section

--- a/index.html
+++ b/index.html
@@ -8,15 +8,44 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <style type="text/css">
+        #header{
+            background: url('imgs/header.jpeg');
+        }
+    </style>
     <title>Pattern</title>
 </head>
-
 <body>
+    <!-- navbar -->
     <nav class="navbar navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="#">PATTERN</a>
         </div>
     </nav>
+
+    <!-- header -->
+    <section id="header" class="jumbotron text-center">
+        <h1 class="display-3">PATTERN</h1>
+        <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?</p>
+        <button class="btn btn-primary">Do something</button>
+        <button class="btn btn-success">Another Thing</button>
+     </section>
+
+    <!-- gallery -->
+    <section>
+        <div class="container">
+            <div class="card">
+                <img class="card-img-top" src="imgs/pattern1.jpeg">
+                <div class="card-body">
+                    <h5 class="card-title">First thing</h5>
+                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?</p>
+                    <a class="btn btn-outline-success btn-sm" href="#">Download</a>
+                </div>
+            </div>
+            
+        </div>
+    </section>
+
 
 
 
