add the other cards

--- a/index.html
+++ b/index.html
@@ -34,15 +34,38 @@
     <!-- gallery -->
     <section>
         <div class="container">
-            <div class="card">
-                <img class="card-img-top" src="imgs/pattern1.jpeg">
-                <div class="card-body">
-                    <h5 class="card-title">First thing</h5>
-                    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?</p>
-                    <a class="btn btn-outline-success btn-sm" href="#">Download</a>
+            <div class="row">
+                <div class="col-lg-4 mb-3">
+                    <div class="card">
+                        <img class="card-img-top" src="imgs/pattern1.jpeg">
+                        <div class="card-body">
+                            <h5 class="card-title">First thing</h5>
+                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?</p>
+                            <a class="btn btn-outline-success btn-sm" href="#">Download</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-3">
+                    <div class="card">
+                        <img class="card-img-top" src="imgs/pattern1.jpeg">
+                        <div class="card-body">
+                            <h5 class="card-title">First thing</h5>
+                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?</p>
+                            <a class="btn btn-outline-success btn-sm" href="#">Download</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-3">
+                    <div class="card">
+                        <img class="card-img-top" src="imgs/pattern1.jpeg">
+                        <div class="card-body">
+                            <h5 class="card-title">First thing</h5>
+                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?</p>
+                            <a class="btn btn-outline-success btn-sm" href="#">Download</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-            
         </div>
     </section>
 
